tests/snapshots/generated_from_inputs__good_empty_if.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\n\nint main() {\n    if(false);\n    printInt(1);\n    return 0;\n}\n"
input_file: inputs/good/empty_if.lat
---
; ModuleID = 'empty_if'
source_filename = "empty_if"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 1)
  ret i32 0
}

