tests/snapshots/generated_from_inputs__good_empty_instructions.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    ;;;;;\n    return 0;\n}\n"
input_file: inputs/good/empty_instructions.lat
---
; ModuleID = 'empty_instructions'
source_filename = "empty_instructions"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  ret i32 0
}

