tests/snapshots/generated_from_inputs__good_escaped_string.snap
---
source: tests/fixtures.rs
description: "// Autor: Bolek Kulbabinski\n\nint f(int p){\n    int c = p + 2*p;\n    printString(\"\\\"\\npop\\npowrot:\\ngetstatic java/lang/System/out Ljava/io/PrintStream;\\nldc \\\"zle \\\"\\ninvokevirtual java/io/PrintStream/print(Ljava/lang/String;)V\\ngoto powrot\\nldc \\\"\");\n    return c;\n}\n\nint main() {\n    return f(1) - 3;\n}\n\n"
input_file: inputs/good/escaped_string.lat
---
; ModuleID = 'escaped_string'
source_filename = "escaped_string"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_f(i32 %0) {
b0:
  %v2 = mul i32 2, %0
  %v3 = add i32 %0, %v2
  %str_ptr = alloca [156 x i8], align 1
  store [156 x i8] c"\22\0Apop\0Apowrot:\0Agetstatic java/lang/System/out Ljava/io/PrintStream;\0Aldc \22zle \22\0Ainvokevirtual java/io/PrintStream/print(Ljava/lang/String;)V\0Agoto powrot\0Aldc \22", [156 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [156 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 156)
  call void @printString(%string* %new_string)
  ret i32 %v3
}

define i32 @main() {
b0:
  %latte_user_f = call i32 @latte_user_f(i32 1)
  %v3 = sub i32 %latte_user_f, 3
  ret i32 %v3
}

