tests/snapshots/generated_from_inputs__good_expr_simplification2.snap
---
source: tests/fixtures.rs
description: "void simpl(int a) {\n    if (a - a == 0) {\n        printInt(1);\n    } else {\n        // This call should not be GENERATED at all\n        printInt(0);\n    }\n}\n\nint main() {\n    simpl(1);\n    return 0;\n}\n"
input_file: inputs/good/expr_simplification2.lat
---
; ModuleID = 'expr_simplification2'
source_filename = "expr_simplification2"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @latte_user_simpl(i32 1)
  ret i32 0
}

define void @latte_user_simpl(i32 %0) {
b0:
  %v1 = sub i32 %0, %0
  %v3 = icmp eq i32 %v1, 0
  br i1 %v3, label %b1, label %b2

b2:                                               ; preds = %b0
  call void @printInt(i32 0)
  br label %b3

b1:                                               ; preds = %b0
  call void @printInt(i32 1)
  br label %b3

b3:                                               ; preds = %b1, %b2
  ret void
}

