tests/snapshots/generated_from_inputs__good_fine_ident.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    int abcABC000___ = 0;\n    return abcABC000___;\n}\n"
input_file: inputs/good/fine_ident.lat
---
; ModuleID = 'fine_ident'
source_filename = "fine_ident"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  ret i32 0
}

