tests/snapshots/generated_from_inputs__good_if_false_always_returns.snap
---
source: tests/fixtures.rs
description: "int main() {\n    if (false) {\n        printInt(2);\n    } else {\n        return 0;\n    }\n}"
input_file: inputs/good/if_false_always_returns.lat
---
; ModuleID = 'if_false_always_returns'
source_filename = "if_false_always_returns"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  ret i32 0
}

