tests/snapshots/generated_from_inputs__good_if_phi.snap
---
source: tests/fixtures.rs
description: "void test(int arg) {\n    int x = 0;\n    if (arg == 1) {\n        x = 1;\n    } else {\n        x = 2;\n    }\n    printInt(x);\n}\n\nint main() {\n    test(1);\n    test(42);\n    return 0;\n}\n"
input_file: inputs/good/if_phi.lat
---
; ModuleID = 'if_phi'
source_filename = "if_phi"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @latte_user_test(i32 1)
  call void @latte_user_test(i32 42)
  ret i32 0
}

define void @latte_user_test(i32 %0) {
b0:
  %v3 = icmp eq i32 %0, 1
  br i1 %v3, label %b1, label %b2

b2:                                               ; preds = %b0
  br label %b3

b1:                                               ; preds = %b0
  br label %b3

b3:                                               ; preds = %b1, %b2
  %v6 = phi i32 [ 1, %b1 ], [ 2, %b2 ]
  call void @printInt(i32 %v6)
  ret void
}

