tests/snapshots/generated_from_inputs__good_ir_test.snap
---
source: tests/fixtures.rs
description: "int main() {\n    int x = 10;\n    int y = x + 5;\n    x = x - 1;\n    if (x < 3) {\n       x = 4;\n    }\n    printInt(x);\n    return 0;\n}"
input_file: inputs/good/ir_test.lat
---
; ModuleID = 'ir_test'
source_filename = "ir_test"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  br i1 false, label %b1, label %b2

b1:                                               ; preds = %b0
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v8 = phi i32 [ 9, %b0 ], [ 4, %b1 ]
  call void @printInt(i32 %v8)
  ret i32 0
}

